--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Gruppe4_Projekt3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${¨}
-spring.datasource.username=${¨}
-spring.datasource.password=${¨}
+spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnement
+spring.datasource.username=root
+spring.datasource.password=1234
