--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Gruppe4_Projekt3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_USERNAME}
-spring.datasource.password=${JDBC_PASSWORD}
+spring.datasource.url=jdbc:mysql://baserver.mysql.database.azure.com:3306
+spring.datasource.username=bilabonnement
+spring.datasource.password=BAPrivat123
