--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=Gruppe4_Projekt3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://baserver.mysql.database.azure.com:3306
 spring.datasource.username=Bilabonnement
