--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Gruppe4_Projekt3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://baserver.mysql.database.azure.com:3306
+spring.datasource.url=jdbc:mysql://baserver.mysql.database.azure.com:3306/bilabonnement
 spring.datasource.username=Bilabonnement
 spring.datasource.password=BAPrivat123
