--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${JBDC_DATABASE_URL}
-spring.datasource.username=${JBDC_USERNAME}
-spring.datasource.password=${JBDC_PASSWORD}
+spring.datasource.url=${url}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
