--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://baserver.mysql.database.azure.com:3306/bilabonnement?useSSL=true&requireSSL=false&serverTimezone=UTC
-spring.datasource.username=Bilabonnement
-spring.datasource.password=BAPrivat123
+spring.datasource.url={JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_USERNAME}
+spring.datasource.password={JDBC_PASSWORD}
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
 logging.level.org.springframework.security=DEBUG
