--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url={JDBC_DATABASE_URL}
-spring.datasource.username={JDBC_USERNAME}
-spring.datasource.password={JDBC_PASSWORD}
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.initialization-fail-timeout=-1
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
 logging.level.org.springframework.security=DEBUG
