--- a/.github/workflows/master_baprivat.yml
+++ b/.github/workflows/master_baprivat.yml
@@ -18,11 +18,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java version
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'microsoft'
+- name: Set up Java version
+  uses: actions/setup-java@v4
+  with:
+    java-version: '23'
+    distribution: 'temurin'
 
       - name: Build with Maven
         run: mvn clean install
