--- a/.github/workflows/master_baprivat.yml
+++ b/.github/workflows/master_baprivat.yml
@@ -13,7 +13,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # This is required for actions/checkout
+      contents: read # Required for actions/checkout
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up Java version
@@ -21,6 +22,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'microsoft'
+          cache: maven
       - name: Build with Maven
         run: mvn clean install
       - name: Upload artifact for deployment job
@@ -28,6 +30,7 @@ jobs:
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -35,8 +38,9 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # This is required for requesting the JWT
-      contents: read # This is required for actions/checkout
+      id-token: write # Required for requesting the JWT
+      contents: read # Required for actions/checkout
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
